--- a/languages/ru.lang
+++ b/languages/ru.lang
@@ -2,7 +2,7 @@
 # Russian translations for Deviot Plugin.
 # Copyright (C) 2015-2016 GEPD
 # This file is distributed under the same license as the Deviot Plugin.
-# Translators: Alexsey Rodoinov
+# Translators: Alexsey Rodoinov (R4ddd)
 #
 
 # Setup Process
